# mdns-publisher

./: CMakeLists.txt  README.md  dependencies.tsv  main.go
include/: dns_packet.h  mdns_publisher.h  query.h  record_class.h  record_type.h  resource_record.h
include/record_data/: a_record_data.h  aaaa_record_data.h  record_data.h  record_data_factory.h
src/: dns_packet.cpp  main.cpp  mdns_publisher.cpp  query.cpp  resource_record.cpp
src/record_data/: a_record_data.cpp  aaaa_record_data.cpp  record_data.cpp  record_data_factory.cpp
tests/: CMakeLists.txt
tests/cmake/: FindGmock.cmake
tests/unit/: CMakeLists.txt
tests/unit/src/: dns_packet_tests.cpp  main.cpp  query_tests.cpp  resource_record_tests.cpp
tests/unit/src/record_data/: a_record_data_tests.cpp  aaaa_record_data_tests.cpp  record_data_factory_tests.cpp
